--- a/src/pages/Signup/index.css
+++ b/src/pages/Signup/index.css
@@ -1,19 +1,22 @@
 .auth-container {
- width: 100%;
- height: 92vh;
- overflow: hidden;
+ width: 100vw;
+ min-height: 100vh;
+ height: auto;
+ flex-direction: column;
+ align-items: center;
+ justify-content: flex-end;
  padding: 0;
  margin-bottom: 0;
 }
 
 .auth-container > div {
  width: 100%;
- height: 18rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
+ margin-bottom: 5rem;
 }
 
 .auth-container > div div {
@@ -26,19 +29,17 @@
 
 .auth-form {
  width: 80%;
- min-height: 20rem;
- position: absolute;
- bottom: 4%;
  padding: 1rem 5%;
  background-color: var(--shade);
  border-radius: 1.2rem;
+ margin-bottom: 2rem;
 }
 
 .auth-form > .oauth {
  width: 100%;
  height: 3.2rem;
  background-color: rgba(255, 255, 255, 0.05);
- border: none;
+ border: .060rem solid rgba(255, 255, 255, 0.090);
  border-radius: .8rem;
  margin-block: 1rem 1.8rem;
 }
@@ -92,4 +93,28 @@
 .auth-button + p a {
  color: rgb(160, 160, 160);
  font-weight: bolder;
+}
+
+
+
+@media (min-width: 726px) {
+ .auth-container {
+  width: 90vw;
+  height: 100vh;
+  position: fixed;
+  left: 50%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  align-items: center;
+  justify-content: center;
+  padding: 0 5vw;
+  padding-top: 2vw;
+  transform: translateX(-50%);
+  overflow: hidden;
+ }
+ 
+ .auth-container > div {
+  margin-bottom: 0;
+ }
 }
