--- a/src/pages/Signup/index.css
+++ b/src/pages/Signup/index.css
@@ -1,6 +1,6 @@
 .auth-container {
  width: 100vw;
- min-height: 100vh;
+ min-height: 95vh;
  height: auto;
  flex-direction: column;
  align-items: center;
@@ -15,8 +15,8 @@
  flex-direction: column;
  align-items: center;
  justify-content: center;
+ margin-bottom: 6rem;
  gap: 1rem;
- margin-bottom: 5rem;
 }
 
 .auth-container > div div {
@@ -57,6 +57,18 @@
 }
 .auth-form > input:focus {
  border-bottom: .080rem solid var(--sclr);
+}
+
+.auth-form .reset-link {
+ text-align: right;
+ margin-top: 1.2rem;
+}
+.auth-form .reset-link a {
+ color: var(--sclr);
+ transition: .2s;
+}
+.auth-form .reset-link a:hover {
+ color: var(--text-color);
 }
 
 .password-input {
