--- a/src/pages/Favourite/index.css
+++ b/src/pages/Favourite/index.css
@@ -92,10 +92,11 @@
 
 .clicked-book-modal button {
  width: 100%;
- height: 3rem;
+ height: 3.3rem;
+ color: white;
  background-color: red;
  border: .1rem solid red;
- border-radius: 1rem;
+ border-radius: .8rem;
  margin-top: .8rem;
 }
 .clicked-book-modal button span {
@@ -139,7 +140,7 @@
  height: 2.5rem;
  background-color: var(--sclr);
  border: .1rem solid var(--sclr);
- border-radius: 1rem;
+ border-radius: .8rem;
 }
 
 
