--- a/src/pages/Favourite/index.css
+++ b/src/pages/Favourite/index.css
@@ -111,6 +111,7 @@
 
 .clicked-book-img {
  width: 8.5rem;
+ min-width: 8rem;
  height: 10.5rem;
  background-color: var(--bg-color);
  border-radius: .8rem;
