--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -2,27 +2,20 @@
   width: 88vw;
   height: 4rem;
   list-style: none;
-  margin: .6rem 0 1.5rem 0;
+  margin-top: .6rem;
   z-index: 10;
 }
 .home-topbar li {
   height: 100%;
 }
 .home-topbar > li:last-of-type > div {
-  width: 2rem;
-  height: 2.1rem;
+  width: 2.6rem;
+  height: 2.6rem;
   object-fit: cover;
-  object-position: center;
+  background-color: var(--shade);
   border: .1rem solid var(--shade);
   border-radius: 50%;
   margin-left: 1.4rem;
-  
-  & img {
-   width: 2rem;
-   height: 2.1rem;
-   object-fit: cover;
-   border-radius: 50%;
-  }
 }
 .home-topbar-icon {
   width: 2rem;
